finished 5 day forecast function and formatted css to allow for easier legibility while testing. fixed bug where a city could be searched multiple times.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,23 @@ h1 {
     justify-content: center;
 }
 
+h2 {
+border: solid 2px black;
+}
+
 .flexContainer {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: nowrap;
     flex-direction: column;
+}
+
+.fiveDayContainer {
+    display: flex; 
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+    align-items: center;
 }
